* RELEASE 14D
- Enable stealth attacks via bombardment
- Recon missions can be make vulnerable to interception
- Option to charge one move for recon missions and interception
- Allow players to opt out of stealth attacks
- Polish precision striking by land or sea units
  - Use regular bombard animation instead of flying animation
  - Use bombard range instead of operational range
- Message appears after bomber dodges interception by air defense buildings
- Option to immunize aircraft against bombardment

* RELEASE 14
- Automatically cut research spending to avoid bankruptcy
- Option to aggressively penalize bankrupt players
  - Sells non-gold-generating buildings, non-free units, and switches city production to Wealth
- Remove pause for "we love the king" messages
- Holding shift while a stack bombard is going will temporarily turn off combat animations
- Fix units could trespass by attacking an enemy unit across a restricted border
- Widen C3X error, info, and warning popups
- Warn if two-city start contains adjacent cities or missing FP cities
- Gold amount autofill activates when editing an amount on the table
- Option to remove exception to tile penalty for city tiles with fresh water and Agri trait
- Suppress "maximum hypertext links exceeded" popup
- NoRaze restriction applies to the human player as well as AIs
- Civilopedia indicates when units go obsolete but cannot be upgraded

* RELEASE 13
- AI two-city start
- Remove cap on turn limit
- Option to strengthen forbidden palace decorruption effect to match the palace's
- Option to allow military great leaders to hurry wonders
- Option to reduce AI research rate by half
- Resource generation from buildings can be set to ignore revealing tech
- Address some issues with text encoding
  - Includes fix for encoding error on Windows 8.1
- Apply building prereqs to all unit types with the same name
  - Fixes prereq sometimes not applying to AIs

* RELEASE 12
- Support for the executable from PCGames.de